Updated status as of November 2023

--- a/laos.tex
+++ b/laos.tex
@@ -49,7 +49,7 @@
 \newcommand{\nn}{\nonumber \\}
 \def\espai{\;\;\;\;\;\;\;}
 
-\title{LAOS: Vision for a Scalable, Truly Non-Custodial,\\Dynamic NFT Protocol with Universal Minting \& Evolution }
+\title{LAOS: Vision for a Scalable, Bridgelessly Connected, Truly Non-Custodial, Dynamic NFT Protocol.}
 \author{
   Alessandro Siniscalchi,
   Toni Mateos, PhD\footnote{PhD in String Theory, University of Barcelona \& Imperial College of London.}
@@ -58,7 +58,7 @@
   Co-Founders @ Freeverse \& LAOS \\
   \{alessandro, toni, alun\}@freeverse.io
 }
-\date{May, 2023}
+\date{November, 2023}
 
 
 
@@ -74,7 +74,7 @@
 
 \input{src/overview}
 \input{src/introduction}
-\input{src/living_assets}
+\input{src/laos_assets}
 \input{src/architecture}
 \input{src/bridgeless}
 \input{src/security}
