--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -1,15 +1,17 @@
 \begin{abstract}
 
-This whitepaper presents the vision and design of LAOS,
-the Living Assets Open System,
+This whitepaper presents the vision and design for LAOS,
 a truly non-custodial dynamic NFT protocol
-that, leveraging its core feature of bridgeless minting and evolution,
-aims to establish itself as the go-to platform
-for creating and evolving digital goods across all blockchains.
+that, leveraging its core features of bridgeless connectivity to all EVM chains,
+as well as second-order type of scalability,
+aims to establish itself as the consensus system that every other
+chain uses to scale their Digital Ownership transactions,
+instantly and securely, and without bridging.
 % 
 With an architecture planned for sharding-based scalability patterns,
-LAOS will enable applications that unlock the full power of 
-digital ownership, migrating from the current mindset of scarcity and speculation, 
+LAOS will enable currently mature ecosystems, such as Ethereum, to support applications
+that unlock the full power of digital ownership,
+migrating from the current mindset of scarcity and speculation, 
 to one of abundance and captured User Generated Value.
 % 
 LAOS addresses the growing issue of custodianship,
