--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -1,7 +1,9 @@
 \section{Conclusions} \label{conclusion}
 
 We have presented the vision and design for a truly non-custodial
-dynamic NFT protocol, ready to scale and enable fairer, main-stream,
+dynamic NFT protocol, ready to scale any existing chain that 
+supports smart contracts,
+and enable fairer, main-stream,
 models around digital ownership, 
 such as User Generated Value patterns.
 
@@ -25,7 +27,7 @@ the adoption of decentralized solutions,
 empowering users to maintain control over their assets.
 
 With the key feature of bridgeless minting and evolution at its core,
-LAOS aims at becoming the home of Dynamic NFTs, the platform
+LAOS aims at becoming the home of Digital Ownership and Dynamic NFTs, the platform
 where digital goods are created and evolved for all blockchains.
 
 
