--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -115,7 +115,7 @@ resulting in millions of stolen funds. Examples include
 widely used bridges between Ethereum and Solana\cite{eth-solana},
 bridges required to play {\it Axie Infinity},
 the most popular NFT-based game at the time\cite{axie-bridge-1}, \cite{axie-bridge-2},
-as well as vulnerarilities of up to \$850M that 
+as well as vulnerabilities of up to \$850M that 
 were live for some time in the Polygon to Ethereum bridge,
 but fixed before being exploited\cite{polygon-hack}.
 
