--- a/src/architecture.tex
+++ b/src/architecture.tex
@@ -99,7 +99,7 @@ discussed in Section \ref{sec:bridgeless-tech}.
 \subsubsection{Leveraging Polkadot's ecosystem and features}
 
 LAOS is architected as a specialized Parachain in Polkadot\cite{polkadot}, \cite{polkadotExplained},
-fully devoted to providing the ideal platform to fulfill the aforementioned Living Assets requirements and vision.
+fully devoted to providing the ideal platform to fulfill the aforementioned requirements and vision.
 The architectural design choices exploit several benefits that are unique to Polkadot, among others:
 \begin{itemize}
     \item as a Parachain, it will automatically inherit the full security guarantees 
@@ -124,14 +124,29 @@ and progressively adopt upgrades developed by other teams, while contributing to
 LAOS will by built around the architecture depicted in \fig{fig:architecture}.
 We hereby detail its main system components.
 
+\begin{Figure}
+    \medskip
+    \includegraphics[width=1\textwidth]{laos-architecture.png}
+        \captionof{figure}{
+            Vision for the core design of LAOS: the LAOS Relay Chain (d)
+            is connected to the Ownership Parachain (b)
+            via one single trustless bridge (c),
+            while its set of validators provide security
+            to the Evochains (e$_i$) via the standard Polkadot
+            Relay Chain to Parachain sharding pattern.
+        }
+    \medskip
+    \label{fig:architecture}
+\end{Figure}
+
 \vspace{\baselineskip}
 
-{\bf (a) Relay Chain.}
+{\bf (a) Polkadot's Relay Chain.}
 At the root of the LAOS consensus protocol is Polkadot's Relay Chain, with the set 
 of Polkadot validators that provide security to the Parachain, ensuring that
 every transaction processed by a Parachain is valid. The Relay Chain
 also help Parachains transfer assets and connect functionalities in a fully
-trustless way via native Cross-Consensus Messaging (XCM), and efficiently 
+trustless way via native Cross-Consensus Messaging (XCM), efficiently 
 linking the light clients that Parachains have from other Parachains.
 
 \vspace{\baselineskip}
@@ -144,49 +159,18 @@ Polkadot standard NPoS protocol, with the following functionalities:
     \item manage the ownership of all LA created directly in LAOS, with 
     transactions implemented at the protocol level,
     and fees paid in the native tokens;
-    \item manage runtime upgrades of all Evolution Chains (Evochains);
+    \item manage runtime upgrades of LAOS' Relay Chain, and all Evolution Chains (Evochains);
     \item store state roots of the Evochains, exposing asset attributes
     certification methods,
-    and reward Evochains validators upon reception of new correct roots;
-    \item manage all trustless transfers of Living Assets and LAOS tokens
+    and reward LAOS Relay Chain validators upon reception of new correct roots;
+    \item manage all trustless transfers of LAOS Assets and LAOS tokens
     between LAOS and the rest of Parachains via XCM;
     \item implement and coordinate governance and staking.
 \end{itemize}
 
-\begin{Figure}
-    \medskip
-    \includegraphics[width=1\textwidth]{laos-architecture.png}
-    \captionof{figure}{High-level architecture of LAOS, containing: (a) Polkadot's relay
-    chain, (b) the LAOS ownership Parachain, (c$_i$) the LAOS Evochains, 
-    (d$_i$) the trustless bridges connecting Evochains to the ownership Parachain }
-    \medskip
-    \label{fig:architecture}
-\end{Figure}
-
-
 \vspace{\baselineskip}
 
-{\bf (c) LAOS Evochains.}
-Living Assets are created and evolved in the Evochains.
-They are Substrate-based solo chains with GRANDPA finality,
-supporting asset mint and evolution at protocol level.
-Initially, they will be connected to the Parachain
-via the trustless bridge for Substrate chains with GRANDPA finality (details below).
-
-All Evochains share the same runtime, and runtime upgrades are orchestrated by the Ownership chain via usage of the trustless
-bridge. Likewise, Evochains do not have a native token. DApp developers that create  
-and evolve LA pay transaction fees to Evochain validators in teleported LAOS tokens.
-
-Each Evochain supports a large number of DApps, and new Evochains are spawned when approaching full capacity,
-as opposed to simply increasing gas price.
-
-The trustless bridge ensures that the state of every Evochain
-remains in the Ownership Parachain, allowing for certification of
-every attribute of every LA, via standard Merkle proofs.
-
-\vspace{\baselineskip}
-
-{\bf (d) GRANDPA-Based Trustless Bridges.}
+{\bf (c) GRANDPA-Based Trustless Bridge.}
 LAOS will make use of the bridge technology developed 
 by Polkadot ecosystem to trustlessly connect Substrate-based 
 chains with GRANDPA finality\cite{parity-bridges},
@@ -199,55 +183,66 @@ mathematically verify any statement received about
 the state of the other chain. In particular, new headers are accepted only
 after verification of the required majority of validators of the other chain.
 
-The bridge will be used to teleport LAOS tokens to and from the Evochains,
-always with a 1:1 parity, to enable payments of gas fees for 
+The bridge will be used to teleport LAOS tokens among the Ownership, LAOS Relay Chain,
+and the Evochains, always with a 1:1 parity, to enable payments of gas fees for 
 mint and evolve transactions, irrespective of whether they corresponds
 to assets that can be traded in the LAOS Parachain, or in other
 blockchains via remote, bridgeless minting and evolution.
 
-Likewise, the bridge will be used to constantly record the state of Evochains
-in the LAOS Parachain, allowing on-chain verification of all assets
+Likewise, the bridge will be used to constantly record the state of the LAOS Relay Chain,
+and its Evochains, in the LAOS Ownership Parachain, allowing on-chain verification of all assets
 attributes, including every state they went through.
+
+\vspace{\baselineskip}
+
+{\bf (d) LAOS Relay Chain.}
+Connected to the Ownership Parachain via one single trustless bridge (c),
+and providing security to the Evochains (e$_i$) sits a specialized, limited-functionality,
+version of
+Polkadot's Relay Chain. Both chains at the end of the bridge run a light-client
+of each other, ensuring that their full states are mutually known in a permissionless
+way.  
+
+The LAOS Relay Chain runtime upgrades are orchestrated by
+the Ownership chain via XCM commands across the trustless bridge.
+Likewise, this Relay Chain will not have a native token; it's economy will use 
+LAOS tokens reserve transferred from the the Ownership Parachain.
+
+In turn the LAOS Relay Chain will provide security to its Parachains following exactly
+the same pattern as Polkadot's Relay Chain.
+
+\vspace{\baselineskip}
+
+{\bf (e) LAOS Evochains.}
+LAOS Assets are created and evolved in the Evochains.
+They are Parachains of the LAOS Relay Chain,
+supporting asset mint and evolution at protocol level.
+
+All Evochains share the same runtime, and runtime upgrades are orchestrated by the
+LAOS Relay Chain, the runtime of which is in turn orchestrated by the Ownership Parachain.
+Similarly, Evochains do not have a native token. DApp developers that create  
+and evolve LA pay transaction fees to Evochain collators in teleported LAOS tokens.
+
+Each Evochain supports a large number of DApps, and new Evochains are spawned when approaching full capacity,
+as opposed to simply increasing gas price. When Polkadot Parathreads and on-demand patterns
+are fully consolidated, LAOS will consider integrating them as an additional complementary pattern. 
+
+Note that the trustless bridge ensures that the state of every Evochain
+remains in the Ownership Parachain, allowing for certification of
+every attribute of every LA, via standard Merkle proofs.
 
 
 \subsection{Scalability} \label{sec:architecture-future}
 
-As the platform experiences growth and the validator set expands
-within the Evochains, the platform will be able to undergo a 
-smooth migration to a design that will not only increase security,
-but also increase scalability by a significant factor.
-
-In this paradigm, when the validator set is sufficiently large,
-one option that shall be pursued is
-to use Polkadot's relay chain modules to spawn a new, limited-functionality and
-simplified, relay chain, as shown in component (d) of \fig{fig:phase2}.
-The goal is not to reproduce a Polkadot-inside-Polkadot pattern, but rather,
+The described architecture does not attempt to reproduce  
+a {\it Polkadot-inside-Polkadot} 2nd-order-relay pattern, but rather,
 to constitute a specialized system, focusing on scaling homogeneously,
-supporting Evochains running exactly the same runtime.  
+supporting Evochains managed by exactly the same runtime.  
 
-The essential properties of system will be maintained, but homogeneous sharding
-will enable a single set of validators to provide security to a much larger
-number of Evochains. This option will be revisited in due time,
-accounting for the maturity of the different components required.
+As usage grows, LAOS stands to benefit directly from
+Polkadot's sharding technology, which enables the spawning of
+new Evochains, while maintaining their security through a single set of validators.
 
-\begin{Figure}
-    \medskip
-    \includegraphics[width=1\textwidth]{phase2.png}
-        \captionof{figure}{
-            Vision for the design where the set of validators 
-            of the previous Evochains gather in the form of a 
-            relay chain (d), connected to the Ownership Parachain via
-            one single trustless bridge (c), and providing security
-            to the Evochains (e$_i$) via the standard Polkadot relay chain 
-            consensus. 
-        }
-    \medskip
-    \label{fig:phase2}
-\end{Figure}
-
-
-
-
-
-
-
+LAOS overall throughput, typically measured in transactions per second,
+is expected to align with Polkadot's own estimates as the combined throughput
+for all its Parachains. 
