--- a/src/overview.tex
+++ b/src/overview.tex
@@ -1,34 +1,37 @@
 \section{Overview}\label{overview}
 
-LAOS, the Living Assets Open System,
-aims at providing the universal platform where dynamic NFTs are created and evolved for all blockchains
-in a truly non-custodial way, in contrast to highly centralized practices common today.
-It will introduce and leverage the powerful concept of bridgeless minting and evolution, 
-whereby developers can benefit from the features of LAOS while using any blockchain of their choice
+LAOS aims to become the consensus system that every other chain uses to scale their Digital Ownership transactions,
+instantly and securely, without bridges, and in a truly non-custodial way, in contrast to highly centralized practices common today.
+
+It introduces and leverages the powerful concept of bridgeless minting and evolution, 
+whereby developers can benefit from the features of LAOS, from day 1, while remaining in the blockchain of their choice
 to do trading and use DeFi services as usual, with no bridges required.
 
-LAOS will enable DApp developers to build applications that unlock the full power of 
+LAOS enables DApp developers to build applications that unlock the full power of 
 digital ownership, migrating from the common mindset of extreme {\it scarcity} and associated {\it speculative dynamics}, 
 to one of {\it abundance} and captured {\it User Generated Value} (UGV).
 
-LAOS will be a fully open layer 1 blockchain, decentralized via usage of its own native utility token,
+LAOS is a fully open layer 1 blockchain, decentralized via usage of its own native utility token,
 built as a specialized Parachain in the Polkadot
-ecosystem, inheriting its security and advanced features, and with an architecture
-designed to scale as usage grows. Within Polkadot, it will leverage its trustless connection
+ecosystem, inheriting its security and advanced features. LAOS will replicate a part of Polkadot's architecture
+inside Polkadot itself, providing its own sharding-based scaling specialized in Digital Ownership. 
+
+Within Polkadot, it leverages its trustless connection
 to other Parachains specialized in smart contracts, such as Moonbeam and Astar,
 and data storage, such as Crust Network.
 
-LAOS is committed to raising public awareness about the potential risks of centralized flows
-and partnering with regulatory bodies to ensure that blockchain-based
-digital ownership lives up to its promise; assets that are tradable
-for real money and held in privately-owned servers entail
-risks akin to those typically associated with securities.
+LAOS provides the foundations for companies and creators to
+protect themselves from legal issues regarding their assets being considered securities,
+by storing asset metadata on decentralized systems that can be verified on-chain.
+Committed to promoting awareness of the risks of centralized flows, LAOS collaborates with
+regulators to ensure blockchain digital ownership lives up to its promise,
+ensuring companies do not become custodians of the NFTs they create.
 
 Section \ref{introduction} provides an introduction to the current landscape of NFT technology,
 focusing on some of the main issues that have led to limited use cases, and highly centralized
 practices. 
-Section \ref{living-assets} introduces the main aspects and enabled use cases around
-Living Assets.
+Section \ref{laos-assets} introduces the key aspects and
+use cases enabled by Digital Ownership within LAOS.
 %
 Section \ref{sec:architecture} provides an in-depth walkthrough of the core 
 technology and architecture of LAOS, as well as the main actors involved and their incentives.
